# ttt

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md  generate-cert.sh
certs/: .gitignore  cert.pem  private.pem
include/ttt/: EPoll.hh  board.hh  client.hh  common.hh  connection.hh  constants.hh  database.hh  room.hh  server.hh  timer.hh  tls_connection.hh  unet.hh  user.hh
include/ttt/protocol/: buffer.hh  lexer.hh  msg.hh  parser.hh
src/: CMakeLists.txt  board.cc  client.cc  connection.cc  database.cc  parser.cc  server.cc  tls_connection.cc  unet.cc  user.cc
src/protocol/: lexer.cc  parser.cc
tests/: CMakeLists.txt  test-board.cc  test-connection.cc  test-database.cc  test-dummy.cc  test-tls_connection.cc
tests/protocol/: test-buffer.cc  test-lexer.cc  test-msg.cc  test-parser.cc
